--- a/header.html
+++ b/header.html
@@ -6,14 +6,25 @@
 <path d="M24 45.8096C19.6865 45.8096 15.4698 44.5305 11.8832 42.134C8.29667 39.7376 5.50128 36.3314 3.85056 32.3462C2.19985 28.361 1.76794 23.9758 2.60947 19.7452C3.451 15.5145 5.52816 11.6284 8.57829 8.5783C11.6284 5.52817 15.5145 3.45101 19.7452 2.60948C23.9758 1.76795 28.361 2.19986 32.3462 3.85057C36.3314 5.50129 39.7376 8.29668 42.134 11.8833C44.5305 15.4698 45.8096 19.6865 45.8096 24L24 24L24 45.8096Z"></path>
 </svg>
 </div>
-<h2 class="text-xl font-bold leading-tight tracking-[-0.015em]">CakeCo</h2>
+<h2 class="text-xl font-bold leading-tight tracking-[-0.015em]"> <a href="index.html">CakeCo</a></h2>
 </div>
 <nav class="hidden items-center gap-8 md:flex">
-<a class="text-sm font-medium hover:text-primary" href="index.html">Home</a>
 <a class="text-sm font-medium hover:text-primary" href="archive.html">Products</a>
 <a class="text-sm font-medium hover:text-primary" href="cake_details.html">Cake Details</a>
 <a class="text-sm font-medium hover:text-primary" href="cart.html">Cart</a>
 <a class="text-sm font-medium hover:text-primary" href="oderconfo.html">Order Confromation</a>
+<a class="text-sm font-medium hover:text-primary" href="contact-us.html">Contact Us</a>
+<a class="text-sm font-medium hover:text-primary" href="about-us.html">About Us</a>
+<div class="relative group">
+  <button class="text-sm font-medium hover:text-primary flex items-center gap-1">
+      More <span class="material-symbols-outlined text-xs">expand_more</span>
+    </button>
+    <div class="absolute hidden group-hover:flex flex-col bg-surface-light dark:bg-surface-dark shadow-md rounded mt-2 p-2 min-w-[150px]">
+      <a class="px-3 py-1 hover:bg-primary/10 rounded" href="order-delivery-info.html">Ordering Info</a>
+      <a class="px-3 py-1 hover:bg-primary/10 rounded" href="cake-tips-page.html">Cake Tips</a>
+      <a class="px-3 py-1 hover:bg-primary/10 rounded" href="faq.html">FAQ</a>
+    </div>
+
 </nav>
 <div class="flex items-center gap-2">
 <button class="flex h-10 w-10 cursor-pointer items-center justify-center overflow-hidden rounded-full bg-primary/20 text-text-light dark:text-text-dark hover:bg-primary/30 dark:hover:bg-primary/40">
